--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 	<body>
 		<section class="todoapp" v-cloak>
 			<header class="header">
-				<h1>todos</h1>
-				<input class="new-todo" autofocus autocomplete="off" placeholder="What needs to be done?" v-model="newTodo" @keyup.enter="addTodo">
+				<h1>Lista zadań</h1>
+				<input class="new-todo" autofocus autocomplete="off" placeholder="Co potrzebujesz zrobić?" 
+					v-model="newTodo" @keyup.enter="addTodo">
 			</header>
 			<section class="main" v-show="todos.length">
 				<input id="toggle-all" class="toggle-all" type="checkbox" v-model="allDone">
@@ -42,9 +43,9 @@
 			</footer>
 		</section>
 		<footer class="info">
-			<p>Double-click to edit a todo</p>
-			<p>Written by <a href="http://evanyou.me">Evan You</a></p>
-			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+			<p>Pozwójne kliknięcie edytuje zadanie</p>
+			<p>Napisany przez <a href="http://evanyou.me">Evan You</a></p>
+			<p>Część <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
 		<script src="node_modules/todomvc-common/base.js"></script>
 		<script src="node_modules/director/build/director.js"></script>
