--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<section class="main" v-show="zadania.length">
 				<input id="toggle-all" class="toggle-all" type="checkbox" v-model="allDone">
 				<label for="toggle-all">Mark all as complete</label>
-				<ul class="todo-list">
+				<ul class="zadanie-lista">
 					<li class="todo" v-for="todo in filteredTodos" :key="todo.id" :class="{completed: todo.completed, editing: todo == editedTodo}">
 						<div class="view">
 							<input class="toggle" type="checkbox" v-model="todo.completed">
