--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 			</section>
 			<footer class="footer" v-show="zadania.length">
 				<span class="todo-count">
-					<strong v-text="remaining"></strong> {{pluralize('item', remaining)}} left
+					<strong v-text="pozostalo"></strong> {{liczbaMnoga('', pozostalo)}} do wykonania
 				</span>
 				<ul class="filters">
 					<li><a href="#/all" :class="{selected: widocznosc == 'all'}">All</a></li>
 					<li><a href="#/active" :class="{selected: widocznosc == 'active'}">Active</a></li>
 					<li><a href="#/completed" :class="{selected: widocznosc == 'completed'}">Completed</a></li>
 				</ul>
-				<button class="clear-completed" @click="removeCompleted" v-show="zadania.length > remaining">
+				<button class="clear-completed" @click="removeCompleted" v-show="zadania.length > pozostalo">
 					Clear completed
 				</button>
 			</footer>
