vue_todomvc: 01_9: Translate project to polish: zadanie-liczba i stopka

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 					</li>
 				</ul>
 			</section>
-			<footer class="footer" v-show="zadania.length">
-				<span class="todo-count">
+			<footer class="stopka" v-show="zadania.length">
+				<span class="zadanie-liczba">
 					<strong v-text="pozostalo"></strong> {{liczbaMnoga('', pozostalo)}} do wykonania
 				</span>
 				<ul class="filters">
