--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<input id="toggle-all" class="toggle-all" type="checkbox" v-model="allDone">
 				<label for="toggle-all">Mark all as complete</label>
 				<ul class="zadanie-lista">
-					<li class="zadanie" v-for="zadanie in filteredTodos" :key="zadanie.id" :class="{completed: zadanie.completed, editing: zadanie == poEdycjiZadanie}">
+					<li class="zadanie" v-for="zadanie in filtrowaneZadania" :key="zadanie.id" :class="{completed: zadanie.completed, editing: zadanie == poEdycjiZadanie}">
 						<div class="view">
 							<input class="toggle" type="checkbox" v-model="zadanie.completed">
 							<label @dblclick="edycjaZadanie(zadanie)">{{zadanie.title}}</label>
@@ -33,9 +33,9 @@
 					<strong v-text="pozostalo"></strong> {{liczbaMnoga('', pozostalo)}} do wykonania
 				</span>
 				<ul class="filters">
-					<li><a href="#/all" :class="{selected: widocznosc == 'all'}">All</a></li>
-					<li><a href="#/active" :class="{selected: widocznosc == 'active'}">Active</a></li>
-					<li><a href="#/completed" :class="{selected: widocznosc == 'completed'}">Completed</a></li>
+					<li><a href="#/all" :class="{selected: widocznosc == 'all'}">Wszystkie</a></li>
+					<li><a href="#/active" :class="{selected: widocznosc == 'active'}">Aktywne</a></li>
+					<li><a href="#/completed" :class="{selected: widocznosc == 'completed'}">Ukończone</a></li>
 				</ul>
 				<button class="usun-ukonczone" @click="usunUkonczone" v-show="zadania.length > pozostalo">
 					Usuń ukończone
