--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 			</header>
 			<section class="main" v-show="zadania.length">
 				<input id="toggle-all" class="toggle-all" type="checkbox" v-model="allDone">
-				<label for="toggle-all">Mark all as complete</label>
+				<label for="toggle-all">Zaznacz wszystkie jako ukończone</label>
 				<ul class="zadanie-lista">
-					<li class="zadanie" v-for="zadanie in filtrowaneZadania" :key="zadanie.id" :class="{completed: zadanie.completed, editing: zadanie == poEdycjiZadanie}">
+					<li class="zadanie" v-for="zadanie in filtrowaneZadania" :key="zadanie.id" :class="{completed: zadanie.ukonczone, editing: zadanie == poEdycjiZadanie}">
 						<div class="view">
-							<input class="toggle" type="checkbox" v-model="zadanie.completed">
+							<input class="toggle" type="checkbox" v-model="zadanie.ukonczone">
 							<label @dblclick="edycjaZadanie(zadanie)">{{zadanie.title}}</label>
-							<button class="destroy" @click="removeTodo(zadanie)"></button>
+							<button class="destroy" @click="usunZadanie(zadanie)"></button>
 						</div>
 						<input class="edit" type="text" v-model="zadanie.title" v-todo-focus="zadanie == poEdycjiZadanie" @blur="doneEdit(zadanie)" @keyup.enter="doneEdit(zadanie)" @keyup.esc="cancelEdit(zadanie)">
 					</li>
