--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 			<header class="glowka">
 				<h1>Lista zadań</h1>
 				<input class="nowe-zadanie" autofocus autocomplete="off" placeholder="Co potrzebujesz zrobić?" 
-					v-model="noweZadanie" @keyup.enter="addTodo">
+					v-model="noweZadanie" @keyup.enter="dodajZadanie">
 			</header>
 			<section class="main" v-show="zadania.length">
-				<input id="toggle-all" class="toggle-all" type="checkbox" v-model="allDone">
+				<input id="toggle-all" class="toggle-all" type="checkbox" v-model="wszUkoncz">
 				<label for="toggle-all">Zaznacz wszystkie jako ukończone</label>
 				<ul class="zadanie-lista">
 					<li class="zadanie" v-for="zadanie in filtrowaneZadania" :key="zadanie.id" :class="{completed: zadanie.ukonczone, editing: zadanie == poEdycjiZadanie}">
 						<div class="view">
 							<input class="toggle" type="checkbox" v-model="zadanie.ukonczone">
 							<label @dblclick="edycjaZadanie(zadanie)">{{zadanie.title}}</label>
-							<button class="destroy" @click="usunZadanie(zadanie)"></button>
+							<button class="usunZadanie" @click="usunZadanie(zadanie)"></button>
 						</div>
-						<input class="edit" type="text" v-model="zadanie.title" v-todo-focus="zadanie == poEdycjiZadanie" @blur="doneEdit(zadanie)" @keyup.enter="doneEdit(zadanie)" @keyup.esc="cancelEdit(zadanie)">
+						<input class="edit" type="text" v-model="zadanie.title" v-todo-focus="zadanie == poEdycjiZadanie" @blur="poEdycji(zadanie)" @keyup.enter="poEdycji(zadanie)" @keyup.esc="cancelEdit(zadanie)">
 					</li>
 				</ul>
 			</section>
