vue_todomvc: 01_14: Translate project to polish: wszystkie

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<strong v-text="pozostalo"></strong> {{liczbaMnoga('', pozostalo)}} do wykonania
 				</span>
 				<ul class="filtry">
-					<li><a href="#/all" :class="{zaznaczone: widocznosc == 'all'}">Wszystkie</a></li>
+					<li><a href="#/wszystkie" :class="{zaznaczone: widocznosc == 'wszystkie'}">Wszystkie</a></li>
 					<li><a href="#/active" :class="{zaznaczone: widocznosc == 'active'}">Aktywne</a></li>
 					<li><a href="#/completed" :class="{zaznaczone: widocznosc == 'completed'}">Ukończone</a></li>
 				</ul>
