--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 					v-model="noweZadanie" @keyup.enter="dodajZadanie">
 			</header>
 			<section class="main" v-show="zadania.length">
-				<input id="toggle-all" class="toggle-all" type="checkbox" v-model="wszUkoncz">
-				<label for="toggle-all">Zaznacz wszystkie jako ukończone</label>
+				<input id="ukoncz-wsz" class="ukoncz-wsz" type="checkbox" v-model="wszUkoncz">
+				<label for="ukoncz-wsz">Zaznacz wszystkie jako ukończone</label>
 				<ul class="zadanie-lista">
 					<li class="zadanie" v-for="zadanie in filtrowaneZadania" :key="zadanie.id" 
 						:class="{cUkonczone: zadanie.ukonczone, edytowane: zadanie == poEdycjiZadanie}">
 						<div class="view">
-							<input class="toggle" type="checkbox" v-model="zadanie.ukonczone">
+							<input class="ukoncz" type="checkbox" v-model="zadanie.ukonczone">
 							<label @dblclick="edycjaZadanie(zadanie)">{{zadanie.tytul}}</label>
 							<button class="usunZadanie" @click="usunZadanie(zadanie)"></button>
 						</div>
